--- a/.gitignore
+++ b/.gitignore
@@ -41,7 +41,6 @@ CTestTestfile.cmake
 build/
 
 # VSCode
-.vscode/
 .devcontainer/devcontainer.json
 
 # debug run output
@@ -49,3 +48,6 @@ run/**/dir
 
 # gomea random seed
 random_seed.dat
+
+.env
+*.pyc
