--- a/experiments/pyproject.toml
+++ b/experiments/pyproject.toml
@@ -5,8 +5,9 @@ description = ""
 authors = [
     {name = "Joas Mulder", email = "joasmulder@hotmail.com"},
 ]
-dependencies = []
-requires-python = ">=3.9"
+dependencies = [
+    "pymongo>=4.0.1"]
+requires-python = ">=3.10"
 license = {text = "MIT"}
 
 [project.urls]
