--- a/experiments/pyproject.toml
+++ b/experiments/pyproject.toml
@@ -6,7 +6,11 @@ authors = [
     {name = "Joas Mulder", email = "joasmulder@hotmail.com"},
 ]
 dependencies = [
-    "pymongo>=4.0.1"]
+    "pymongo>=4.0.1",
+    "python-dotenv>=0.19.2",
+    "Pillow>=9.0.0",
+    "numpy>=1.22.1",
+]
 requires-python = ">=3.10"
 license = {text = "MIT"}
 
