--- a/experiments/pyproject.toml
+++ b/experiments/pyproject.toml
@@ -1,25 +1,22 @@
-[project]
-name = ""
-version = ""
+[tool.poetry]
+name = "experiments"
+version = "0.1.0"
 description = ""
-authors = [
-    {name = "Joas Mulder", email = "joasmulder@hotmail.com"},
-]
-dependencies = [
-    "pymongo>=4.0.1",
-    "python-dotenv>=0.19.2",
-    "Pillow>=9.0.0",
-    "numpy>=1.22.1",
-]
-requires-python = ">=3.10"
-license = {text = "MIT"}
+authors = ["Joas Mulder <joasmulder@hotmail.com>"]
 
-[project.urls]
-homepage = ""
+[tool.poetry.dependencies]
+python = "^3.10"
+pandas = "^1.4.0"
+ipykernel = "^6.7.0"
+pymongo = "^4.0.1"
+python-dotenv = "^0.19.2"
+Pillow = "^9.0.0"
+numpy = "^1.22.1"
 
-[tool]
-[tool.pdm]
+[tool.poetry.dev-dependencies]
+pytest = "^5.2"
+autopep8 = "^1.6.0"
 
 [build-system]
-requires = ["pdm-pep517"]
-build-backend = "pdm.pep517.api"
+requires = ["poetry-core>=1.0.0"]
+build-backend = "poetry.core.masonry.api"
