optimizations openblas eigen3

--- a/Components/Optimizers/RVGOMEA/CMakeLists.txt
+++ b/Components/Optimizers/RVGOMEA/CMakeLists.txt
@@ -5,4 +5,12 @@ ADD_ELXCOMPONENT(GOMEA
   elxGOMEA.cxx
   itkGOMEAOptimizer.h
   itkGOMEAOptimizer.cxx
+  util/FOS.h
+  util/Tools.h
+  util/FOS.cxx
+  util/Tools.cxx
 )
+
+find_package(BLAS REQUIRED)
+
+target_link_libraries(GOMEA ${BLAS_LIBRARIES})
