--- a/Core/CMakeLists.txt
+++ b/Core/CMakeLists.txt
@@ -1,6 +1,8 @@
 #---------------------------------------------------------------------
 project( elxCore )
 
+include(FindBLAS)
+
 #---------------------------------------------------------------------
 # Define lists of files in the subdirectories.
 
