--- a/experiments/pyproject.toml
+++ b/experiments/pyproject.toml
@@ -12,7 +12,7 @@ pymongo = "^4.0.1"
 python-dotenv = "^0.19.2"
 Pillow = "^9.0.0"
 numpy = "^1.22.1"
-optuna = "^2.10.0"
+nbformat = "^5.1.3"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
