partial evals memory efficiency

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -57,6 +57,11 @@
                     "description": "Enable pretty-printing for gdb",
                     "text": "-enable-pretty-printing",
                     "ignoreFailures": true
+                },
+                {
+                    "description": "Enable all-exceptions",
+                    "text": "catch throw",
+                    "ignoreFailures": true
                 }
             ]
         },
@@ -84,6 +89,11 @@
                 {
                     "description": "Enable pretty-printing for gdb",
                     "text": "-enable-pretty-printing",
+                    "ignoreFailures": true
+                },
+                {
+                    "description": "Enable all-exceptions",
+                    "text": "catch throw",
                     "ignoreFailures": true
                 }
             ]
