--- a/experiments/pyproject.toml
+++ b/experiments/pyproject.toml
@@ -13,6 +13,8 @@ python-dotenv = "^0.19.2"
 Pillow = "^9.0.0"
 numpy = "^1.22.1"
 nbformat = "^5.1.3"
+tinydb = "^4.6.1"
+nibabel = "^3.2.1"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
