--- a/experiments/pyproject.toml
+++ b/experiments/pyproject.toml
@@ -15,6 +15,7 @@ numpy = "^1.22.1"
 nbformat = "^5.1.3"
 tinydb = "^4.6.1"
 nibabel = "^3.2.1"
+wandb = "^0.12.10"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
