partial evals threading no reference wrappers

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -66,6 +66,13 @@
         "thread": "cpp",
         "cinttypes": "cpp",
         "typeinfo": "cpp",
-        "valarray": "cpp"
+        "valarray": "cpp",
+        "csetjmp": "cpp",
+        "csignal": "cpp",
+        "any": "cpp",
+        "optional": "cpp",
+        "ranges": "cpp",
+        "typeindex": "cpp",
+        "variant": "cpp"
     }
 }
