--- a/experiments/pyproject.toml
+++ b/experiments/pyproject.toml
@@ -16,6 +16,7 @@ nbformat = "^5.1.3"
 tinydb = "^4.6.1"
 nibabel = "^3.2.1"
 wandb = "^0.12.10"
+matplotlib = "^3.5.1"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
