--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -74,5 +74,9 @@
         "ranges": "cpp",
         "typeindex": "cpp",
         "variant": "cpp"
-    }
+    },
+    "cmake.configureArgs": [
+        "-C${workspaceFolder}/CMakeDefaultCache.txt",
+        "-DCMAKE_BUILD_TYPE:STRING=${buildType}"
+    ]
 }
