remove threader if using openmp

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -45,7 +45,7 @@
                 "-p",
                 "params.txt",
                 "-out",
-                "dir",
+                "dir"
             ],
             "stopAtEntry": false,
             "cwd": "${workspaceFolder}/run/trivial",
