--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -73,7 +73,8 @@
         "optional": "cpp",
         "ranges": "cpp",
         "typeindex": "cpp",
-        "variant": "cpp"
+        "variant": "cpp",
+        "dense": "cpp"
     },
     "cmake.configureArgs": [
         "-C${workspaceFolder}/CMakeDefaultCache.txt"
