--- a/experiments/requirements.txt
+++ b/experiments/requirements.txt
@@ -32,7 +32,6 @@ nest-asyncio==1.5.4; python_full_version >= "3.6.1" and python_version >= "3.7"
 nibabel==3.2.2; python_version >= "3.6"
 numpy==1.22.3; python_version >= "3.8"
 packaging==21.3; python_version >= "3.7"
-pandas==1.4.1; python_version >= "3.8"
 parso==0.8.3; python_version >= "3.8"
 pathtools==0.1.2; python_version >= "3.6"
 pexpect==4.8.0; sys_platform != "win32" and python_version >= "3.8"
@@ -50,9 +49,8 @@ pygments==2.11.2; python_version >= "3.8"
 pymongo==4.0.2; python_version >= "3.6"
 pyparsing==3.0.7; python_version >= "3.7"
 pyrsistent==0.18.1; python_version >= "3.7"
-python-dateutil==2.8.2; python_full_version >= "3.6.1" and python_version >= "3.8"
+python-dateutil==2.8.2; python_full_version >= "3.6.1" and python_version >= "3.7"
 python-dotenv==0.19.2; python_version >= "3.5"
-pytz==2021.3; python_version >= "3.8"
 pywin32==303; sys_platform == "win32" and platform_python_implementation != "PyPy" and python_version >= "3.7" and python_full_version >= "3.6.1"
 pyyaml==6.0; python_version >= "3.6"
 pyzmq==22.3.0; python_full_version >= "3.6.1" and python_version >= "3.7"
@@ -61,7 +59,7 @@ sentry-sdk==1.5.7; python_version >= "3.6"
 setproctitle==1.2.2; python_version >= "3.6"
 setuptools-scm==6.4.2; python_version >= "3.7"
 shortuuid==1.0.8; python_version >= "3.6"
-six==1.16.0; python_version >= "3.8" and python_full_version < "3.0.0" or python_full_version >= "3.3.0" and python_version >= "3.8"
+six==1.16.0; python_full_version >= "3.6.1" and python_version >= "3.7" and (python_version >= "3.8" and python_full_version < "3.0.0" or python_full_version >= "3.3.0" and python_version >= "3.8")
 smmap==5.0.0; python_version >= "3.7"
 stack-data==0.2.0; python_version >= "3.8"
 termcolor==1.1.0; python_full_version >= "3.6.2" and python_full_version < "4.0.0" and python_version >= "3.6"
