experiment queue redis

--- a/experiments/pyproject.toml
+++ b/experiments/pyproject.toml
@@ -16,11 +16,16 @@ tinydb = "^4.6.1"
 nibabel = "^3.2.1"
 wandb = "^0.12.10"
 matplotlib = "^3.5.1"
+redis = "^4.1.4"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
 autopep8 = "^1.6.0"
+poetry-githooks = "^2.0.0"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
 build-backend = "poetry.core.masonry.api"
+
+[tool.githooks]
+pre-commit = "poetry export -f requirements.txt --output requirements.txt --without-hashes"
