--- a/experiments/.env.example
+++ b/experiments/.env.example
@@ -1,3 +1,6 @@
 ELASTIX_EXECUTABLE=/home/joasiee/projects/elastix/build/Release/bin/elastix
 INSTANCES_SRC=/home/joasiee/instances
 WANDB_API_KEY=
+REDIS_HOST=
+REDIS_PORT=
+REDIS_PWD=
