--- a/experiments/requirements.txt
+++ b/experiments/requirements.txt
@@ -10,10 +10,11 @@ colorama==0.4.4; python_version >= "3.8" and python_full_version < "3.0.0" and s
 cycler==0.11.0; python_version >= "3.7"
 debugpy==1.5.1; python_version >= "3.7" and python_full_version < "3.0.0" or python_full_version >= "3.5.0" and python_version >= "3.7"
 decorator==5.1.1; python_version >= "3.8"
+deprecated==1.2.13; python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.4.0" and python_version >= "3.6"
 docker-pycreds==0.4.0; python_version >= "3.6"
 entrypoints==0.4; python_full_version >= "3.6.1" and python_version >= "3.7"
 executing==0.8.3; python_version >= "3.8"
-fonttools==4.30.0; python_version >= "3.7"
+fonttools==4.31.1; python_version >= "3.7"
 gitdb==4.0.9; python_version >= "3.7"
 gitpython==3.1.27; python_version >= "3.7"
 idna==3.3; python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.6.0" and python_version >= "3.6"
@@ -54,8 +55,9 @@ python-dotenv==0.19.2; python_version >= "3.5"
 pywin32==303; sys_platform == "win32" and platform_python_implementation != "PyPy" and python_version >= "3.7" and python_full_version >= "3.6.1"
 pyyaml==6.0; python_version >= "3.6"
 pyzmq==22.3.0; python_full_version >= "3.6.1" and python_version >= "3.7"
+redis==4.1.4; python_version >= "3.6"
 requests==2.27.1; python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.6.0" and python_version >= "3.6"
-sentry-sdk==1.5.7; python_version >= "3.6"
+sentry-sdk==1.5.8; python_version >= "3.6"
 setproctitle==1.2.2; python_version >= "3.6"
 setuptools-scm==6.4.2; python_version >= "3.7"
 shortuuid==1.0.8; python_version >= "3.6"
@@ -70,5 +72,6 @@ traitlets==5.1.1; python_full_version >= "3.6.1" and python_version >= "3.8"
 urllib3==1.26.9; python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.6.0" and python_version < "4" and python_version >= "3.6"
 wandb==0.12.11; python_version >= "3.6"
 wcwidth==0.2.5; python_full_version >= "3.6.2" and python_version >= "3.8"
+wrapt==1.14.0; python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.5.0" and python_version >= "3.6"
 yaspin==2.1.0; python_full_version >= "3.6.2" and python_full_version < "4.0.0" and python_version >= "3.6"
 zipp==3.7.0; python_version < "3.9" and python_version >= "3.7"
