--- a/experiments/pyproject.toml
+++ b/experiments/pyproject.toml
@@ -14,6 +14,7 @@ redis = "^4.1.4"
 sshtunnel = "^0.4.0"
 [tool.poetry.dev-dependencies]
 pre-commit = "^2.17.0"
+black = "^22.1.0"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
