--- a/experiments/pyproject.toml
+++ b/experiments/pyproject.toml
@@ -12,6 +12,7 @@ wandb = "^0.12.11"
 python-dotenv = "^0.19.2"
 redis = "^4.1.4"
 sshtunnel = "^0.4.0"
+optuna = "^2.10.0"
 [tool.poetry.dev-dependencies]
 pre-commit = "^2.17.0"
 black = "^22.1.0"
