--- a/experiments/requirements.txt
+++ b/experiments/requirements.txt
@@ -1,39 +1,62 @@
+alembic==1.7.7; python_version >= "3.6"
+attrs==21.4.0; python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.5.0" and python_version >= "3.6"
+autopage==0.5.0; python_version >= "3.6"
 bcrypt==3.2.0; python_version >= "3.6"
 certifi==2021.10.8; python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.6.0" and python_version >= "3.6"
 cffi==1.15.0; python_version >= "3.6"
 charset-normalizer==2.0.12; python_full_version >= "3.6.0" and python_version >= "3.6"
 click==8.0.4; python_version >= "3.6"
-colorama==0.4.4; python_version >= "3.6" and python_full_version < "3.0.0" and platform_system == "Windows" or platform_system == "Windows" and python_version >= "3.6" and python_full_version >= "3.5.0"
+cliff==3.10.1; python_version >= "3.6"
+cmaes==0.8.2; python_version >= "3.6"
+cmd2==2.4.0; python_version >= "3.6"
+colorama==0.4.4; python_version >= "3.6" and python_full_version < "3.0.0" and platform_system == "Windows" and sys_platform == "win32" or platform_system == "Windows" and python_version >= "3.6" and python_full_version >= "3.5.0" and sys_platform == "win32"
+colorlog==6.6.0; python_version >= "3.6"
 cryptography==36.0.2; python_version >= "3.6"
 deprecated==1.2.13; python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.4.0" and python_version >= "3.6"
 docker-pycreds==0.4.0; python_version >= "3.6"
 gitdb==4.0.9; python_version >= "3.7"
 gitpython==3.1.27; python_version >= "3.7"
+greenlet==1.1.2; python_version >= "3" and python_full_version < "3.0.0" and (platform_machine == "aarch64" or platform_machine == "ppc64le" or platform_machine == "x86_64" or platform_machine == "amd64" or platform_machine == "AMD64" or platform_machine == "win32" or platform_machine == "WIN32") and (python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.6.0" and python_version >= "3.6") or python_version >= "3" and (platform_machine == "aarch64" or platform_machine == "ppc64le" or platform_machine == "x86_64" or platform_machine == "amd64" or platform_machine == "AMD64" or platform_machine == "win32" or platform_machine == "WIN32") and (python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.6.0" and python_version >= "3.6") and python_full_version >= "3.5.0"
 idna==3.3; python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.6.0" and python_version >= "3.6"
+importlib-metadata==4.11.3; python_version < "3.9" and python_version >= "3.7"
+importlib-resources==5.4.0; python_version < "3.9" and python_version >= "3.6"
+mako==1.2.0; python_version >= "3.7"
+markupsafe==2.1.1; python_version >= "3.7"
 numpy==1.22.3; python_version >= "3.8"
+optuna==2.10.0; python_version >= "3.6"
 packaging==21.3; python_version >= "3.6"
 paramiko==2.10.3
 pathtools==0.1.2; python_version >= "3.6"
+pbr==5.8.1; python_version >= "3.6"
 pillow==9.0.1; python_version >= "3.7"
+prettytable==3.2.0; python_version >= "3.7"
 promise==2.3; python_version >= "3.6"
 protobuf==3.19.4; python_version >= "3.6"
 psutil==5.9.0; python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.4.0" and python_version >= "3.6"
 pycparser==2.21; python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.4.0" and python_version >= "3.6"
 pynacl==1.5.0; python_version >= "3.6"
 pyparsing==3.0.7; python_version >= "3.6"
+pyperclip==1.8.2; python_version >= "3.6"
+pyreadline3==3.4.1; sys_platform == "win32" and python_version >= "3.6"
 python-dateutil==2.8.2; python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.3.0" and python_version >= "3.6"
 python-dotenv==0.19.2; python_version >= "3.5"
 pyyaml==6.0; python_version >= "3.6"
 redis==4.1.4; python_version >= "3.6"
 requests==2.27.1; python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.6.0" and python_version >= "3.6"
+scipy==1.6.1; python_version >= "3.7"
 sentry-sdk==1.5.8; python_version >= "3.6"
 setproctitle==1.2.2; python_version >= "3.6"
 shortuuid==1.0.8; python_version >= "3.6"
 six==1.16.0; python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.3.0" and python_version >= "3.6"
 smmap==5.0.0; python_version >= "3.7"
+sqlalchemy==1.4.32; python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.6.0" and python_version >= "3.6"
 sshtunnel==0.4.0
+stevedore==3.5.0; python_version >= "3.6"
 termcolor==1.1.0; python_full_version >= "3.6.2" and python_full_version < "4.0.0" and python_version >= "3.6"
+tqdm==4.63.0; python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.4.0" and python_version >= "3.6"
 urllib3==1.26.9; python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.6.0" and python_version < "4" and python_version >= "3.6"
 wandb==0.12.11; python_version >= "3.6"
+wcwidth==0.2.5; python_version >= "3.7"
 wrapt==1.14.0; python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.5.0" and python_version >= "3.6"
 yaspin==2.1.0; python_full_version >= "3.6.2" and python_full_version < "4.0.0" and python_version >= "3.6"
+zipp==3.7.0; python_version < "3.9" and python_version >= "3.7"
