dont use global instance for randomcoordinate samplers

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,26 +5,26 @@
     "version": "0.2.0",
     "configurations": [
         {
-            "name": "empire-16",
+            "name": "empire-7",
             "type": "cppdbg",
             "request": "launch",
-            "program": "${workspaceFolder}/build/Debug/bin/elastix",
+            "program": "${workspaceFolder}/build/Release/bin/elastix",
             "args": [
                 "-f",
-                "scans/16_Fixed.mhd",
+                "scans/07_Fixed.mhd",
                 "-fMask",
-                "masks/16_Fixed.mhd",
+                "masks/07_Fixed.mhd",
                 "-m",
-                "scans/16_Moving.mhd",
+                "scans/07_Moving.mhd",
                 "-p",
-                "params.txt",
+                "${workspaceFolder}/run/empire/params.txt",
                 "-out",
-                "out",
+                "${workspaceFolder}/run/empire/out",
                 "-threads",
                 "$OMP_NUM_THREADS"
             ],
             "stopAtEntry": false,
-            "cwd": "/home/joasiee/Documents/thesis/empire",
+            "cwd": "/home/joasiee/Documents/instances/empire",
             "environment": [],
             "externalConsole": false,
             "MIMode": "gdb",
