--- a/experiments/pyproject.toml
+++ b/experiments/pyproject.toml
@@ -13,6 +13,7 @@ python-dotenv = "^0.19.2"
 redis = "^4.1.4"
 sshtunnel = "^0.4.0"
 pandas = "^1.4.1"
+wcwidth = "^0.2.5"
 
 [tool.poetry.dev-dependencies]
 pre-commit = "^2.17.0"
