--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -75,7 +75,9 @@
         "typeindex": "cpp",
         "variant": "cpp",
         "dense": "cpp",
-        "codecvt": "cpp"
+        "codecvt": "cpp",
+        "*.txx": "cpp",
+        "future": "cpp"
     },
     "cmake.configureArgs": [
         "-C${workspaceFolder}/CMakeDefaultCache.txt"
