--- a/Components/Optimizers/RVGOMEA/CMakeLists.txt
+++ b/Components/Optimizers/RVGOMEA/CMakeLists.txt
@@ -11,12 +11,8 @@ ADD_ELXCOMPONENT(GOMEA
   util/Tools.cxx
 )
 
-find_package(BLAS REQUIRED)
-find_package(LAPACK REQUIRED)
-find_package(Boost 1.70.0 REQUIRED)
-
 target_link_libraries(GOMEA
-  BLAS::BLAS
-  LAPACK::LAPACK
-  Boost::boost
+  ${BLAS_LIBRARIES}
+  ${LAPACK_LIBRARIES}
+  ${BOOST_LIBRARIES}
 )
