--- a/experiments/requirements.txt
+++ b/experiments/requirements.txt
@@ -1,9 +1,10 @@
+async-timeout==4.0.2; python_version >= "3.6"
 bcrypt==3.2.0; python_version >= "3.6"
 certifi==2021.10.8; python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.6.0" and python_version >= "3.6"
 cffi==1.15.0; python_version >= "3.6"
 charset-normalizer==2.0.12; python_full_version >= "3.6.0" and python_version >= "3.6"
-click==8.0.4; python_version >= "3.6"
-colorama==0.4.4; python_version >= "3.6" and python_full_version < "3.0.0" and platform_system == "Windows" or platform_system == "Windows" and python_version >= "3.6" and python_full_version >= "3.5.0"
+click==8.1.0; python_version >= "3.7"
+colorama==0.4.4; python_version >= "3.7" and python_full_version < "3.0.0" and platform_system == "Windows" or platform_system == "Windows" and python_version >= "3.7" and python_full_version >= "3.5.0"
 cryptography==36.0.2; python_version >= "3.6"
 deprecated==1.2.13; python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.4.0" and python_version >= "3.6"
 docker-pycreds==0.4.0; python_version >= "3.6"
@@ -26,7 +27,7 @@ python-dateutil==2.8.2; python_version >= "3.8" and python_full_version < "3.0.0
 python-dotenv==0.19.2; python_version >= "3.5"
 pytz==2022.1; python_version >= "3.8"
 pyyaml==6.0; python_version >= "3.6"
-redis==4.1.4; python_version >= "3.6"
+redis==4.2.0; python_version >= "3.6"
 requests==2.27.1; python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.6.0" and python_version >= "3.6"
 sentry-sdk==1.5.8; python_version >= "3.6"
 setproctitle==1.2.2; python_version >= "3.6"
@@ -35,6 +36,7 @@ six==1.16.0; python_version >= "3.8" and python_full_version < "3.0.0" or python
 smmap==5.0.0; python_version >= "3.7"
 sshtunnel==0.4.0
 termcolor==1.1.0; python_full_version >= "3.6.2" and python_full_version < "4.0.0" and python_version >= "3.6"
+typing-extensions==4.1.1; python_version >= "3.6"
 urllib3==1.26.9; python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.6.0" and python_version < "4" and python_version >= "3.6"
 wandb==0.12.11; python_version >= "3.6"
 wcwidth==0.2.5
