--- a/experiments/pyproject.toml
+++ b/experiments/pyproject.toml
@@ -18,6 +18,7 @@ wcwidth = "^0.2.5"
 [tool.poetry.dev-dependencies]
 pre-commit = "^2.17.0"
 black = "^22.1.0"
+ipykernel = "^6.11.0"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
