--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -77,7 +77,12 @@
         "dense": "cpp",
         "codecvt": "cpp",
         "*.txx": "cpp",
-        "future": "cpp"
+        "future": "cpp",
+        "hash_map": "cpp",
+        "eigenvalues": "cpp",
+        "qr": "cpp",
+        "lu": "cpp",
+        "core": "cpp"
     },
     "cmake.configureArgs": [
         "-C${workspaceFolder}/CMakeDefaultCache.txt"
