--- a/Components/Optimizers/RVGOMEA/CMakeLists.txt
+++ b/Components/Optimizers/RVGOMEA/CMakeLists.txt
@@ -13,10 +13,11 @@ ADD_ELXCOMPONENT(GOMEA
 
 find_package(BLAS REQUIRED)
 find_package(LAPACK REQUIRED)
-find_package(Boost 1.70.0 REQUIRED)
+find_package(Boost 1.70.0 REQUIRED COMPONENTS filesystem)
 
 target_link_libraries(GOMEA
   BLAS::BLAS
   LAPACK::LAPACK
   Boost::boost
+  Boost::filesystem
 )
