poetry dev deps

--- a/experiments/pyproject.toml
+++ b/experiments/pyproject.toml
@@ -19,6 +19,8 @@ wcwidth = "^0.2.5"
 pre-commit = "^2.17.0"
 black = "^22.1.0"
 ipykernel = "^6.11.0"
+matplotlib = "^3.5.1"
+tinydb = "^4.7.0"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
