--- a/experiments/pyproject.toml
+++ b/experiments/pyproject.toml
@@ -8,12 +8,13 @@ authors = ["Joas Mulder <joasmulder@hotmail.com>"]
 python = "^3.8"
 numpy = "^1.22.3"
 Pillow = "^9.0.1"
-wandb = "^0.12.11"
 python-dotenv = "^0.19.2"
 redis = "^4.1.4"
 sshtunnel = "^0.4.0"
 pandas = "^1.4.1"
 wcwidth = "^0.2.5"
+pyzmq = "^22.3.0"
+comet-ml = "^3.28.3"
 
 [tool.poetry.dev-dependencies]
 pre-commit = "^2.17.0"
