--- a/experiments/requirements.txt
+++ b/experiments/requirements.txt
@@ -1,43 +1,42 @@
 async-timeout==4.0.2; python_version >= "3.6"
+attrs==21.4.0; python_version >= "3.7" and python_full_version < "3.0.0" or python_full_version >= "3.5.0" and python_version >= "3.7"
 bcrypt==3.2.0; python_version >= "3.6"
 certifi==2021.10.8; python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.6.0" and python_version >= "3.6"
-cffi==1.15.0; python_version >= "3.6"
-charset-normalizer==2.0.12; python_full_version >= "3.6.0" and python_version >= "3.6"
-click==8.1.2; python_version >= "3.7"
-colorama==0.4.4; python_version >= "3.7" and python_full_version < "3.0.0" and platform_system == "Windows" or platform_system == "Windows" and python_version >= "3.7" and python_full_version >= "3.5.0"
+cffi==1.15.0; implementation_name == "pypy" and python_version >= "3.6"
+charset-normalizer==2.0.12; python_full_version >= "3.6.0" and python_version >= "3"
+comet-ml==3.28.3; (python_version >= "2.7" and python_full_version < "3.0.0") or (python_full_version >= "3.5.0")
+configobj==5.0.6; python_version > "3.5" and python_full_version < "3.0.0" or python_full_version >= "3.5.0" and python_version > "3.5"
 cryptography==36.0.2; python_version >= "3.6"
 deprecated==1.2.13; python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.4.0" and python_version >= "3.6"
-docker-pycreds==0.4.0; python_version >= "3.6"
-gitdb==4.0.9; python_version >= "3.7"
-gitpython==3.1.27; python_version >= "3.7"
-idna==3.3; python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.6.0" and python_version >= "3.6"
+dulwich==0.20.35; python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.5.0" and python_version >= "3.6"
+everett==3.0.0; python_version > "3.5" and python_full_version < "3.0.0" or python_full_version >= "3.5.0" and python_version > "3.5"
+idna==3.3; python_version >= "3.5" and python_full_version < "3.0.0" or python_full_version >= "3.6.0" and python_version >= "3.5"
+importlib-resources==5.7.0; python_version >= "3.7" and python_full_version < "3.0.0" and python_version < "3.9" or python_full_version >= "3.5.0" and python_version >= "3.7" and python_version < "3.9"
+jsonschema==4.4.0; python_version >= "3.7" and python_full_version < "3.0.0" or python_full_version >= "3.5.0" and python_version >= "3.7"
 numpy==1.22.3; python_version >= "3.8"
+nvidia-ml-py3==7.352.0; python_version >= "2.7" and python_full_version < "3.0.0" or python_full_version >= "3.5.0"
 packaging==21.3; python_version >= "3.6"
-pandas==1.4.1; python_version >= "3.8"
+pandas==1.4.2; python_version >= "3.8"
 paramiko==2.10.3
-pathtools==0.1.2; python_version >= "3.6"
-pillow==9.0.1; python_version >= "3.7"
-promise==2.3; python_version >= "3.6"
-protobuf==3.19.4; python_version >= "3.6"
-psutil==5.9.0; python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.4.0" and python_version >= "3.6"
-pycparser==2.21; python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.4.0" and python_version >= "3.6"
+pillow==9.1.0; python_version >= "3.7"
+py==1.11.0; python_version >= "3.6" and python_full_version < "3.0.0" and implementation_name == "pypy" or implementation_name == "pypy" and python_version >= "3.6" and python_full_version >= "3.5.0"
+pycparser==2.21; python_version >= "3.6" and python_full_version < "3.0.0" and implementation_name == "pypy" or implementation_name == "pypy" and python_version >= "3.6" and python_full_version >= "3.4.0"
 pynacl==1.5.0; python_version >= "3.6"
-pyparsing==3.0.7; python_version >= "3.6"
+pyparsing==3.0.8; python_full_version >= "3.6.8" and python_version >= "3.6"
+pyrsistent==0.18.1; python_version >= "3.7" and python_full_version < "3.0.0" or python_full_version >= "3.5.0" and python_version >= "3.7"
 python-dateutil==2.8.2; python_version >= "3.8" and python_full_version < "3.0.0" or python_full_version >= "3.3.0" and python_version >= "3.8"
 python-dotenv==0.19.2; python_version >= "3.5"
 pytz==2022.1; python_version >= "3.8"
-pyyaml==6.0; python_version >= "3.6"
-redis==4.2.1; python_version >= "3.6"
-requests==2.27.1; python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.6.0" and python_version >= "3.6"
-sentry-sdk==1.5.8; python_version >= "3.6"
-setproctitle==1.2.2; python_version >= "3.6"
-shortuuid==1.0.8; python_version >= "3.6"
-six==1.16.0; python_version >= "3.8" and python_full_version < "3.0.0" or python_full_version >= "3.3.0" and python_version >= "3.8"
-smmap==5.0.0; python_version >= "3.7"
+pyzmq==22.3.0; python_version >= "3.6"
+redis==4.2.2; python_version >= "3.6"
+requests-toolbelt==0.9.1; python_version >= "2.7" and python_full_version < "3.0.0" or python_full_version >= "3.5.0"
+requests==2.27.1; python_version >= "2.7" and python_full_version < "3.0.0" or python_full_version >= "3.6.0"
+semantic-version==2.9.0; python_version >= "2.7" and python_full_version < "3.0.0" or python_full_version >= "3.5.0" and python_version >= "2.7"
+six==1.16.0; python_version >= "3.8" and python_full_version < "3.0.0" or python_full_version >= "3.5.0" and python_version >= "3.8"
 sshtunnel==0.4.0
-termcolor==1.1.0; python_full_version >= "3.6.2" and python_full_version < "4.0.0" and python_version >= "3.6"
 urllib3==1.26.9; python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.6.0" and python_version < "4" and python_version >= "3.6"
-wandb==0.12.11; python_version >= "3.6"
 wcwidth==0.2.5
+websocket-client==1.3.2; python_version >= "3.7" and python_full_version < "3.0.0" or python_full_version >= "3.5.0" and python_version >= "3.7"
 wrapt==1.14.0; python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.5.0" and python_version >= "3.6"
-yaspin==2.1.0; python_full_version >= "3.6.2" and python_full_version < "4.0.0" and python_version >= "3.6"
+wurlitzer==3.0.2; python_version >= "3.5" and python_full_version < "3.0.0" or python_full_version >= "3.5.0" and python_version >= "3.5"
+zipp==3.8.0; python_version >= "3.7" and python_full_version < "3.0.0" and python_version < "3.9" or python_full_version >= "3.5.0" and python_version >= "3.7" and python_version < "3.9"
