--- a/experiments/pyproject.toml
+++ b/experiments/pyproject.toml
@@ -15,6 +15,7 @@ pandas = "^1.4.1"
 wcwidth = "^0.2.5"
 pyzmq = "^22.3.0"
 comet-ml = "^3.28.3"
+wandb = "^0.12.14"
 
 [tool.poetry.dev-dependencies]
 pre-commit = "^2.17.0"
