--- a/experiments/pyproject.toml
+++ b/experiments/pyproject.toml
@@ -14,6 +14,7 @@ sshtunnel = "^0.4.0"
 pandas = "^1.4.1"
 wcwidth = "^0.2.5"
 wandb = "^0.12.14"
+dictquery = "^0.4.0"
 
 [tool.poetry.dev-dependencies]
 pre-commit = "^2.17.0"
@@ -21,6 +22,7 @@ black = "^22.1.0"
 ipykernel = "^6.11.0"
 matplotlib = "^3.5.1"
 xarray = "^2022.3.0"
+seaborn = "^0.11.2"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
