--- a/experiments/requirements.txt
+++ b/experiments/requirements.txt
@@ -7,6 +7,7 @@ click==8.1.2; python_version >= "3.7"
 colorama==0.4.4; python_version >= "3.7" and python_full_version < "3.0.0" and platform_system == "Windows" or platform_system == "Windows" and python_version >= "3.7" and python_full_version >= "3.5.0"
 cryptography==36.0.2; python_version >= "3.6"
 deprecated==1.2.13; python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.4.0" and python_version >= "3.6"
+dictquery==0.4.0
 docker-pycreds==0.4.0; python_version >= "3.6"
 gitdb==4.0.9; python_version >= "3.7"
 gitpython==3.1.27; python_version >= "3.7"
