--- a/.gitmodules
+++ b/.gitmodules
@@ -1,5 +1,4 @@
-[submodule "dox/manual"]
-	path = dox/manual
-	url = https://github.com/SuperElastix/manual.git
-	update = merge
-	branch = main
+[submodule "External/ITK"]
+	path = External/ITK
+	url = https://github.com/joasiee/ITK.git
+	branch = gomea
