--- a/Components/Optimizers/RVGOMEA/CMakeLists.txt
+++ b/Components/Optimizers/RVGOMEA/CMakeLists.txt
@@ -13,6 +13,7 @@ ADD_ELXCOMPONENT(GOMEA
 
 find_package(BLAS REQUIRED)
 find_package(LAPACK REQUIRED)
+find_package(Boost 1.70.0 REQUIRED)
 
 target_link_libraries(GOMEA
   BLAS::BLAS
