--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,7 @@
 # Minimum CMake version. Equal to ITK 5.0.1 ITK_OLDEST_VALIDATED_POLICIES_VERSION,
 # and to the CMake version used to build the elastix 5.0.0 Linux binaries.
 cmake_minimum_required( VERSION 3.10.2 )
+include(CMakeDefaultCache.txt)
 
 project( elastix )
 set(CMAKE_CXX_STANDARD 17)
