write control points displacements per iteration

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -82,6 +82,8 @@
         "eigenvalues": "cpp",
         "qr": "cpp",
         "lu": "cpp",
-        "core": "cpp"
+        "core": "cpp",
+        "strstream": "cpp",
+        "forward_list": "cpp"
     }
 }
