--- a/experiments/pyproject.toml
+++ b/experiments/pyproject.toml
@@ -15,6 +15,8 @@ pandas = "^1.4.1"
 wcwidth = "^0.2.5"
 wandb = "^0.12.14"
 dictquery = "^0.4.0"
+scipy = "^1.8.0"
+nibabel = "^3.2.2"
 
 [tool.poetry.dev-dependencies]
 pre-commit = "^2.17.0"
