--- a/experiments/requirements.txt
+++ b/experiments/requirements.txt
@@ -3,23 +3,24 @@ bcrypt==3.2.0; python_version >= "3.6"
 certifi==2021.10.8; python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.6.0" and python_version >= "3.6"
 cffi==1.15.0; python_version >= "3.6"
 charset-normalizer==2.0.12; python_full_version >= "3.6.0" and python_version >= "3.6"
-click==8.1.2; python_version >= "3.7"
+click==8.1.3; python_version >= "3.7"
 colorama==0.4.4; python_version >= "3.7" and python_full_version < "3.0.0" and platform_system == "Windows" or platform_system == "Windows" and python_version >= "3.7" and python_full_version >= "3.5.0"
-cryptography==36.0.2; python_version >= "3.6"
+cryptography==37.0.1; python_version >= "3.6"
 deprecated==1.2.13; python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.4.0" and python_version >= "3.6"
 dictquery==0.4.0
 docker-pycreds==0.4.0; python_version >= "3.6"
 gitdb==4.0.9; python_version >= "3.7"
 gitpython==3.1.27; python_version >= "3.7"
 idna==3.3; python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.6.0" and python_version >= "3.6"
+nibabel==3.2.2; python_version >= "3.6"
 numpy==1.22.3; python_version >= "3.8"
 packaging==21.3; python_version >= "3.6"
 pandas==1.4.2; python_version >= "3.8"
-paramiko==2.10.3
+paramiko==2.10.4
 pathtools==0.1.2; python_version >= "3.6"
 pillow==9.1.0; python_version >= "3.7"
 promise==2.3; python_version >= "3.6"
-protobuf==3.20.0; python_version >= "3.7"
+protobuf==3.20.1; python_version >= "3.7"
 psutil==5.9.0; python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.4.0" and python_version >= "3.6"
 pycparser==2.21; python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.4.0" and python_version >= "3.6"
 pynacl==1.5.0; python_version >= "3.6"
@@ -30,6 +31,7 @@ pytz==2022.1; python_version >= "3.8"
 pyyaml==6.0; python_version >= "3.6"
 redis==4.2.2; python_version >= "3.6"
 requests==2.27.1; python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.6.0" and python_version >= "3.6"
+scipy==1.8.0; python_version >= "3.8" and python_version < "3.11"
 sentry-sdk==1.5.10; python_version >= "3.6"
 setproctitle==1.2.3; python_version >= "3.6"
 shortuuid==1.0.8; python_version >= "3.6"
@@ -37,6 +39,6 @@ six==1.16.0; python_version >= "3.8" and python_full_version < "3.0.0" or python
 smmap==5.0.0; python_version >= "3.7"
 sshtunnel==0.4.0
 urllib3==1.26.9; python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.6.0" and python_version < "4" and python_version >= "3.6"
-wandb==0.12.14; python_version >= "3.6"
+wandb==0.12.15; python_version >= "3.6"
 wcwidth==0.2.5
 wrapt==1.14.0; python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.5.0" and python_version >= "3.6"
