--- a/experiments/requirements.txt
+++ b/experiments/requirements.txt
@@ -1,19 +1,19 @@
 async-timeout==4.0.2; python_version >= "3.6"
 bcrypt==3.2.2; python_version >= "3.6"
-certifi==2022.5.18; python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.6.0" and python_version >= "3.6"
+certifi==2022.6.15; python_version >= "3.7" and python_version < "4"
 cffi==1.15.0; python_version >= "3.6"
-charset-normalizer==2.0.12; python_full_version >= "3.6.0" and python_version >= "3.6"
+charset-normalizer==2.0.12; python_version >= "3.7" and python_version < "4" and python_full_version >= "3.5.0"
 click==8.1.3; python_version >= "3.7"
-colorama==0.4.4; python_version >= "3.7" and python_full_version < "3.0.0" and platform_system == "Windows" or platform_system == "Windows" and python_version >= "3.7" and python_full_version >= "3.5.0"
-cryptography==37.0.2; python_version >= "3.6"
+colorama==0.4.5; python_version >= "3.7" and python_full_version < "3.0.0" and platform_system == "Windows" or platform_system == "Windows" and python_version >= "3.7" and python_full_version >= "3.5.0"
+cryptography==37.0.3; python_version >= "3.6"
 deprecated==1.2.13; python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.4.0" and python_version >= "3.6"
 dictquery==0.4.0
 docker-pycreds==0.4.0; python_version >= "3.6"
 gitdb==4.0.9; python_version >= "3.7"
 gitpython==3.1.27; python_version >= "3.7"
-idna==3.3; python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.6.0" and python_version >= "3.6"
+idna==3.3; python_version >= "3.7" and python_version < "4"
 nibabel==3.2.2; python_version >= "3.6"
-numpy==1.22.3; python_version >= "3.8"
+numpy==1.22.4; python_version >= "3.8"
 packaging==21.3; python_version >= "3.6"
 pandas==1.4.2; python_version >= "3.8"
 paramiko==2.11.0
@@ -21,7 +21,7 @@ pathtools==0.1.2; python_version >= "3.6"
 pillow==9.1.1; python_version >= "3.7"
 promise==2.3; python_version >= "3.6"
 protobuf==3.20.1; python_version >= "3.7"
-psutil==5.9.0; python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.4.0" and python_version >= "3.6"
+psutil==5.9.1; python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.4.0" and python_version >= "3.6"
 pycparser==2.21; python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.4.0" and python_version >= "3.6"
 pynacl==1.5.0; python_version >= "3.6"
 pyparsing==3.0.9; python_full_version >= "3.6.8" and python_version >= "3.6"
@@ -29,16 +29,16 @@ python-dateutil==2.8.2; python_version >= "3.8" and python_full_version < "3.0.0
 python-dotenv==0.19.2; python_version >= "3.5"
 pytz==2022.1; python_version >= "3.8"
 pyyaml==6.0; python_version >= "3.6"
-redis==4.3.1; python_version >= "3.6"
-requests==2.27.1; python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.6.0" and python_version >= "3.6"
+redis==4.3.3; python_version >= "3.6"
+requests==2.28.0; python_version >= "3.7" and python_version < "4"
 scipy==1.8.1; python_version >= "3.8" and python_version < "3.11"
-sentry-sdk==1.5.12; python_version >= "3.6"
+sentry-sdk==1.6.0; python_version >= "3.6"
 setproctitle==1.2.3; python_version >= "3.6"
 shortuuid==1.0.9; python_version >= "3.6"
 six==1.16.0; python_version >= "3.8" and python_full_version < "3.0.0" or python_full_version >= "3.3.0" and python_version >= "3.8"
 smmap==5.0.0; python_version >= "3.7"
 sshtunnel==0.4.0
-urllib3==1.26.9; python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.6.0" and python_version < "4" and python_version >= "3.6"
-wandb==0.12.16; python_version >= "3.6"
+urllib3==1.26.9; python_version >= "3.7" and python_full_version < "3.0.0" and python_version < "4" or python_full_version >= "3.5.0" and python_version < "4" and python_version >= "3.7"
+wandb==0.12.18; python_version >= "3.6"
 wcwidth==0.2.5
 wrapt==1.14.1; python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.5.0" and python_version >= "3.6"
