synthetic scene experimental support with landmarks

--- a/Scenes/CMakeLists.txt
+++ b/Scenes/CMakeLists.txt
@@ -1,2 +1,5 @@
 add_executable(EllipseSphereScene EllipseSphereExample.cxx)
 target_link_libraries(EllipseSphereScene ${ITK_LIBRARIES})
+
+add_executable(SphereInCubeScene SphereInCube.cxx)
+target_link_libraries(SphereInCubeScene ${ITK_LIBRARIES})
