--- a/experiments/pyproject.toml
+++ b/experiments/pyproject.toml
@@ -26,6 +26,7 @@ matplotlib = "^3.5.1"
 xarray = "^2022.3.0"
 seaborn = "^0.11.2"
 SciencePlots = "^1.0.9"
+ipywidgets = "^7.7.1"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
