new scene + mask and lms

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -615,3 +615,4 @@ string(REPLACE "\\" "/" ELASTIX_ITK_DIR ${ITK_DIR})
 configure_file( ${elastix_SOURCE_DIR}/ElastixConfig.cmake.in ${elastix_BINARY_DIR}/ElastixConfig.cmake @ONLY )
 configure_file( ${elastix_SOURCE_DIR}/ElastixConfigVersion.cmake.in ${elastix_BINARY_DIR}/ElastixConfigVersion.cmake @ONLY )
 configure_file( ${elastix_SOURCE_DIR}/UseElastix.cmake.in ${elastix_BINARY_DIR}/UseElastix.cmake @ONLY )
+configure_file (${elastix_SOURCE_DIR}/elx_config.h.in ${elastix_BINARY_DIR}/elx_config.h)
