rework of partial evaluations framework
now possible to keep track of more than one value for each evaluation. With this we can add support for the normalized correlation coefficient as well as rewrite the mean squares metric without a missing pixel penalty.

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -173,24 +173,26 @@
             ]
         },
         {
-            "name": "easy",
+            "name": "sphereincube",
             "type": "cppdbg",
             "request": "launch",
             "program": "${workspaceFolder}/build/Debug/bin/elastix",
             "args": [
                 "-f",
-                "fixed.png",
+                "01_Fixed.mhd",
+                "-fMask",
+                "01_FixedMask.mhd",
                 "-m",
-                "moving.png",
+                "01_Moving.mhd",
                 "-p",
                 "params.txt",
                 "-out",
-                "dir",
+                "out",
                 "-threads",
                 "$OMP_NUM_THREADS"
             ],
             "stopAtEntry": false,
-            "cwd": "${workspaceFolder}/run/easy",
+            "cwd": "${workspaceFolder}/run/sphereincube",
             "environment": [],
             "externalConsole": false,
             "MIMode": "gdb",
