--- a/experiments/pyproject.toml
+++ b/experiments/pyproject.toml
@@ -17,6 +17,7 @@ wandb = "^0.12.14"
 dictquery = "^0.4.0"
 scipy = "^1.8.0"
 nibabel = "^3.2.2"
+plotly = "^5.10.0"
 
 [tool.poetry.dev-dependencies]
 pre-commit = "^2.17.0"
