fix mismatch analytic bending energy calculation

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -86,5 +86,6 @@
         "strstream": "cpp",
         "forward_list": "cpp",
         "cholesky": "cpp"
-    }
+    },
+    "C_Cpp.errorSquiggles": "Disabled"
 }
