only add flags for release mode

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,11 +5,13 @@ project( elastix )
 
 list( APPEND CMAKE_MODULE_PATH ${CMAKE_CURRENT_SOURCE_DIR}/CMake )
 
-add_compile_options(-march=native;-mtune=native)
-if(DEFINED ENV{CMAKE_BUILD_PARALLEL_LEVEL})
-  add_compile_options("-flto=$ENV{CMAKE_BUILD_PARALLEL_LEVEL}")
-else()
-  add_compile_options(-flto)
+if (CMAKE_BUILD_TYPE STREQUAL "Release")
+  add_compile_options(-march=native;-mtune=native)
+  if(DEFINED ENV{CMAKE_BUILD_PARALLEL_LEVEL})
+    add_compile_options("-flto=$ENV{CMAKE_BUILD_PARALLEL_LEVEL}")
+  else()
+    add_compile_options(-flto)
+  endif()
 endif()
 
 option (USE_SUPERBUILD "Whether or not a superbuild should be invoked" ON)
